--- a/yok-client/vercel.json
+++ b/yok-client/vercel.json
@@ -17,7 +17,7 @@
 				},
 				{
 					"key": "Access-Control-Allow-Origin",
-					"value": "http://3.110.207.87"
+					"value": "*"
 				},
 				{
 					"key": "Access-Control-Allow-Methods",
