--- a/yok-client/package.json
+++ b/yok-client/package.json
@@ -24,6 +24,7 @@
     "classnames": "2.3.2",
     "cors": "^2.8.5",
     "framer-motion": "10.16.4",
+    "google-auth-library": "^9.10.0",
     "i18next": "^23.6.0",
     "js-cookie": "3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -34,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.9.0",
     "next": "12.3.4",
+    "next-auth": "^4.24.7",
     "next-connect": "^1.0.0",
     "next-i18next": "15.0.0",
     "next-pwa": "5.6.0",
