--- a/yok-client/tsconfig.json
+++ b/yok-client/tsconfig.json
@@ -34,6 +34,6 @@
     "additional.d.ts",
     "src/**/*.ts",
     "src/**/*.tsx"
-  ],
+, "src/pages/api/track-order/track.js"  ],
   "exclude": ["node_modules"]
 }
