--- a/yok-client/tsconfig.json
+++ b/yok-client/tsconfig.json
@@ -1,39 +1,41 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "alwaysStrict": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "paths": {
-      "@components/*": ["src/components/*"],
-      "@containers/*": ["src/containers/*"],
-      "@contexts/*": ["src/contexts/*"],
-      "@framework/*": ["src/framework/basic-rest/*"],
-      "@settings/*": ["src/settings/*"],
-      "@styles/*": ["src/styles/*"],
-      "@utils/*": ["src/utils/*"]
-    },
-    "incremental": true
-  },
-  "include": [
-    "next-env.d.ts",
-    "additional.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx"
-, "src/pages/api/track-order/track.js"  ],
-  "exclude": ["node_modules"]
+	"compilerOptions": {
+		"baseUrl": ".",
+		"target": "es5",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noEmit": true,
+		"esModuleInterop": true,
+		"alwaysStrict": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"jsx": "preserve",
+		"paths": {
+			"@/*": ["src/"],
+			"@components/*": ["src/components/*"],
+			"@containers/*": ["src/containers/*"],
+			"@contexts/*": ["src/contexts/*"],
+			"@framework/*": ["src/framework/basic-rest/*"],
+			"@settings/*": ["src/settings/*"],
+			"@styles/*": ["src/styles/*"],
+			"@utils/*": ["src/utils/*"]
+		},
+		"incremental": true
+	},
+	"include": [
+		"next-env.d.ts",
+		"additional.d.ts",
+		"src/**/*.ts",
+		"src/**/*.tsx",
+		"src/pages/api/track-order/track.js"
+	],
+	"exclude": ["node_modules"]
 }
